# rusty_chip8

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  justfile  opencode.jsonc  test-lsp.asm  test.txt
.claude/: settings.json
chip8-asm/: Cargo.toml
chip8-asm/src/: encoder.rs  include.rs  lexer.rs  lib.rs  macroexpand.rs  main.rs  parser.rs  preprocess.rs  sourcemap.rs  symbol.rs
chip8-asm/tests/: integration.rs
chip8-lsp/: Cargo.toml
chip8-lsp/src/: completion.rs  definition.rs  diagnostics.rs  document.rs  highlight.rs  hover.rs  main.rs  references.rs  rename.rs  server.rs  symbols.rs  workspace.rs
chip8-lsp/tests/: lsp_test.rs
examples/: caveexplorer.ch8  default2.ch8  fez.8o
examples/pong/: const.asm  pong.asm
mcp-server/: Cargo.toml
mcp-server/src/: main.rs
scripts_games/caveexplorer/: board_map.py  detect_walls.py  find_player.py  room_map.py
src/: args.rs  debugger.rs  display.rs  instruction.rs  interpreter.rs  interrupt.rs  keyboard.rs  main.rs  memory.rs  registers.rs
tests/: const_test.asm  directives.asm  ibm_logo.asm  label_test.asm  minimal.asm
vscode-chip8/: language-configuration.json  package.json
vscode-chip8/src/: extension.js  extension.ts
vscode-chip8/syntaxes/: chip8.tmGrammar.json
