[workspace]
resolver = "2"
members = [".", "mcp-server", "chip8-asm", "chip8-lsp"]

[package]
name = "rusty_chip8"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
minifb = "0.24.0"
rand = "0.8.5"
rodio = "0.17.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
