[package]
name = "chip8-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
